rework & correct some bugs on horizontal scroll

--- a/sass/keyframes.scss
+++ b/sass/keyframes.scss
@@ -54,14 +54,14 @@
     4% {
         height: 100px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     5% {
         height: 100px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -82,14 +82,14 @@
     13% {
         height: 200px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     14% {
         height: 200px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -110,14 +110,14 @@
     26% {
         height: 100px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     27% {
         height: 100px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -138,14 +138,14 @@
     46% {
         height: 200px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     47% {
         height: 200px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -166,14 +166,14 @@
     63% {
         height: 200px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     64% {
         height: 200px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -194,14 +194,14 @@
     81% {
         height: 100px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     82% {
         height: 100px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -222,14 +222,14 @@
     91% {
         height: 200px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     92% {
         height: 200px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -250,14 +250,14 @@
     95% {
         height: 100px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     to {
         height: 100px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 }
@@ -280,14 +280,14 @@
     4% {
         height: 100px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     5% {
         height: 100px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -308,14 +308,14 @@
     13% {
         height: 200px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     14% {
         height: 200px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -336,14 +336,14 @@
     26% {
         height: 100px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     27% {
         height: 100px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -364,14 +364,14 @@
     46% {
         height: 200px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     47% {
         height: 200px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -392,14 +392,14 @@
     63% {
         height: 200px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     64% {
         height: 200px;
         left: 87.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -420,14 +420,14 @@
     81% {
         height: 100px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     82% {
         height: 100px;
         left: 37.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -448,14 +448,14 @@
     91% {
         height: 200px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     92% {
         height: 200px;
         left: 12.5%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 
@@ -476,14 +476,14 @@
     95% {
         height: 100px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 1;
     }
 
     to {
         height: 100px;
         left: 50%;
-        top: 100vh;
+        top: 100%;
         opacity: 0;
     }
 }
