--- a/sass/style.scss
+++ b/sass/style.scss
@@ -55,7 +55,7 @@ html {
   position: relative;
   font-size: $base-font-size;
   line-height: $base-line-height;
-  
+
   @media #{$mq-medium} {
     font-size: $base-font-size * 1.2;
     line-height: $base-line-height * 1.2;
@@ -111,6 +111,11 @@ html {
   background-color: #969696;
   animation: white_line_bg_bolt 30s linear infinite forwards;
   -webkit-animation: white_line_bg_bolt 30s linear infinite forwards;
+  
+  &.about {
+    animation: white_line_bg_bolt 120s linear infinite forwards;
+    -webkit-animation: white_line_bg_bolt 120s linear infinite forwards;
+  }
 }
 
 .bg_vertical_line {
@@ -163,7 +168,7 @@ html {
 
 .bg_link_option {
   display: inline;
-  font-family: 'Proxima Nova Bl';
+  font-family: "Proxima Nova Bl";
   font-size: 1.5em;
   text-transform: uppercase;
   -webkit-background-clip: text;
@@ -328,38 +333,38 @@ html {
 }
 
 /* Background menu transition */
-#transition_menu{
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    width: 100%;
+#transition_menu {
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
 }
 
 .transition_color {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: -100%;
-    bottom: auto;
-    background: var(--seconday-color);;
-    z-index: 2;
-    -webkit-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-    transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-    -moz-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-    -ms-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
-    -o-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: -100%;
+  bottom: auto;
+  background: var(--seconday-color);
+  z-index: 2;
+  -webkit-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  -moz-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  -ms-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
+  -o-transition: all 0.9s cubic-bezier(0.6, 0.05, 0.4, 1);
 
-    &.active {
-        right: 100%;
-    }
+  &.active {
+    right: 100%;
+  }
 }
 
 .transition_color_2 {
-    z-index: 2;
-    background: #222222;
-    -webkit-transition-delay: 0.1s;
-    transition-delay: 0.1s;
+  z-index: 2;
+  background: #222222;
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
 }
 
 /* Content */
@@ -498,7 +503,7 @@ html {
 
   .hover_line_2 {
     width: 25px !important;
-    
+
     @media #{$mq-small} {
       width: 35px !important;
     }
@@ -546,7 +551,7 @@ main {
   color: #505050;
   font-size: 1.2rem;
   font-weight: 700;
-  font-family: 'Proxima Nova Bl';
+  font-family: "Proxima Nova Bl";
   height: 50px;
 
   @media #{$mq-small} {
@@ -555,7 +560,7 @@ main {
 }
 
 .typewritter_underscore {
-  width: .8rem;
+  width: 0.8rem;
   height: 2px;
   background: var(--seconday-color);
   margin-top: 1.5rem;
@@ -585,9 +590,9 @@ main {
 .home_description {
   font-weight: 100;
   font-size: 1rem;
-  color: var(--white-text-color);;
+  color: var(--white-text-color);
   font-family: "Proxima Nova Th";
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .main_link {
@@ -597,7 +602,7 @@ main {
   font-size: 1rem;
   cursor: pointer;
 
-  >i{
+  > i {
     vertical-align: middle;
     width: 25px;
     text-align: center;
@@ -622,7 +627,7 @@ main {
   margin: auto;
   position: absolute;
   display: flex;
-  
+
   &:nth-child(1) .img_element_parallax {
     background: no-repeat url("/images/parallax/element (1).svg");
     position: relative;
@@ -654,7 +659,7 @@ main {
   }
 
   &:nth-child(4) .img_element_parallax {
-    background: no-repeat url('/images/parallax/character.svg');
+    background: no-repeat url("/images/parallax/character.svg");
     position: relative;
     width: 60%;
     height: inherit;
@@ -689,7 +694,7 @@ main {
 }
 
 .about_content_description:first-child {
-  margin: 12rem 3rem;
+  margin: 12rem 3rem 0;
 }
 
 .about_title {
@@ -709,7 +714,7 @@ main {
   font-size: 1rem;
   font-family: "Proxima Nova Rg";
   font-weight: 200;
-  margin-top: .8rem;
+  margin-top: 0.8rem;
 
   @media #{$mq-medium} {
     width: 65%;
@@ -740,7 +745,7 @@ main {
 }
 
 .about_description_text {
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .about_grid {
@@ -759,30 +764,127 @@ main {
     }
   }
 }
-  
-.about_grid1 { grid-area: 1 / 1 / 3 / 2; }
-.about_grid2 { grid-area: 1 / 3 / 3 / 4; }
-.about_grid3 { grid-area: 1 / 2 / 3 / 3; }
-.about_grid4 { grid-area: 3 / 3 / 5 / 4; }
-.about_grid5 { grid-area: 3 / 2 / 5 / 3; }
-.about_grid6 { grid-area: 3 / 1 / 5 / 2; }
+
+.about_grid1 {
+  grid-area: 1 / 1 / 3 / 2;
+}
+.about_grid2 {
+  grid-area: 1 / 3 / 3 / 4;
+}
+.about_grid3 {
+  grid-area: 1 / 2 / 3 / 3;
+}
+.about_grid4 {
+  grid-area: 3 / 3 / 5 / 4;
+}
+.about_grid5 {
+  grid-area: 3 / 2 / 5 / 3;
+}
+.about_grid6 {
+  grid-area: 3 / 1 / 5 / 2;
+}
 
 .about_content_parcours {
   overflow: hidden;
 }
 
-.about_content_parcours div {
+.about_content_parcours > div {
   position: relative;
 }
 
 #horizontal_container {
-  width: 5000px;
+  width: 350vw;
   height: 100vh;
+  padding-bottom: 0;
 }
 
-#horizontal_container>div {
+#horizontal_container > .horizontal_container_content {
   position: absolute;
-  top: 50%;
-  left: 3%;
+  top: calc(50% + 3rem);
   transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.horizontal_container_title {
+  position: absolute;
+  text-transform: uppercase;
+  font-family: "Domaine Display Narrow Black";
+  font-size: 3rem;
+  color: var(--white-text-color);
+  margin: 6rem 0 0 3rem;
+  left: 0;
+}
+
+.line_progress_parcours {
+  position: absolute;
+  left: calc(50vw - 0.5rem);
+  width: 250vw;
+  top: 50%;
+
+  > .entire_line {
+    height: 4px;
+    background-color: #8c8c8c;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+  }
+
+  > #complete_line {
+    margin-top: -4px;
+    background-color: #dcdcdc;
+    width: 0;
+    height: 4px;
+    position: absolute;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+    transition: width 0.2s cubic-bezier(0, 1.01, 0.58, 1);
+    -webkit-transition: width 0.2s cubic-bezier(0, 1.01, 0.58, 1);
+    -moz-transition: width 0.2s cubic-bezier(0, 1.01, 0.58, 1);
+    -ms-transition: width 0.2s cubic-bezier(0, 1.01, 0.58, 1);
+    -o-transition: width 0.2s cubic-bezier(0, 1.01, 0.58, 1);
+  }
+}
+
+.horizontal_container_bg_text {
+  font-family: "Domaine Display Narrow Black";
+  font-size: 10rem;
+  letter-spacing: 2rem;
+  position: relative;
+  margin: 0 auto;
+  height: 100%;
+  text-transform: uppercase;
+  color: #2d2d2d;
+}
+
+.horizontal_container_carreer {
+  display: flex;
+  position: absolute;
+}
+
+.progress_step {
+  width: 20rem;
+  position: absolute;
+
+  &:nth-child(1){
+    left: 50vw;
+  }
+  &:nth-child(2){
+    left: 100vw;
+  }
+  &:nth-child(3){
+    left: 150vw;
+  }
+  &:nth-child(4){
+    left: 200vw;
+  }
+  &:nth-child(5){
+    left: 250vw;
+  }
 }
